[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game Scenes/World Scene.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/CanvasLayerNormal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/SharedLevel2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Tilesets/grass.tres" type="TileSet" id=4]
[ext_resource path="res://Player/Player Tall.gd" type="Script" id=5]
[ext_resource path="res://Player/Tall spriteframes.tres" type="SpriteFrames" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 26.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.0

[node name="Tall Scene" type="Node2D" groups=[
"world",
]]
script = ExtResource( 1 )
INDEX = 3
player = NodePath("Player Tall")

[node name="CanvasLayer2" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 360.0
margin_bottom = 240.0
color = Color( 0.764706, 0.929412, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SharedLevel" parent="." instance=ExtResource( 3 )]
terrain_tiles = ExtResource( 4 )

[node name="Player Tall" type="RigidBody2D" parent="." groups=[
"player",
]]
position = Vector2( 181.235, 117.088 )
collision_layer = 2
collision_mask = 21
mode = 2
physics_material_override = SubResource( 1 )
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 5 )
can_jump = false

[node name="RayLeft" type="RayCast2D" parent="Player Tall"]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 4

[node name="RayLeft1" type="RayCast2D" parent="Player Tall"]
position = Vector2( 0, -38 )
cast_to = Vector2( -16, 0 )
collision_mask = 4

[node name="RayRight" type="RayCast2D" parent="Player Tall"]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 4

[node name="RayRight1" type="RayCast2D" parent="Player Tall"]
position = Vector2( 0, -38 )
cast_to = Vector2( 16, 0 )
collision_mask = 4

[node name="Sprite" type="AnimatedSprite" parent="Player Tall"]
frames = ExtResource( 6 )
animation = "grab2"
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Tall"]
position = Vector2( 0, 2.74341 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player Tall"]
current = true

[node name="Tall1" type="CollisionShape2D" parent="Player Tall"]
position = Vector2( 0.315552, -21.3199 )
shape = SubResource( 3 )

[node name="Tall2" type="CollisionShape2D" parent="Player Tall"]
position = Vector2( 0, -39.2519 )
shape = SubResource( 3 )
disabled = true
